RESOLVED FIXED34151
[V8] Missing declaration for feMorphology in V8DOMWrapper
https://bugs.webkit.org/show_bug.cgi?id=34151
Summary [V8] Missing declaration for feMorphology in V8DOMWrapper
Garret Kelly
Reported 2010-01-25 19:47:36 PST
V8 does not create the proper V8Object for feMorphology elements, which can be witnessed by the following test: alert(document.createElementNS("http://www.w3.org/2000/svg", "feMorphology")); You'll see that the returned type is [object SVGElement] instead of [object SVGFEMorphologyElement].
Attachments
Proposed patch (1.03 KB, patch)
2010-01-25 19:49 PST, Garret Kelly
no flags
Garret Kelly
Comment 1 2010-01-25 19:49:26 PST
Created attachment 47382 [details] Proposed patch
Eric Seidel (no email)
Comment 2 2010-01-25 20:03:51 PST
Comment on attachment 47382 [details] Proposed patch I assume this affects tests? Otherwise we really should make sure we have a test which touches this part of SVG.
Garret Kelly
Comment 3 2010-01-25 20:13:48 PST
Yes, the svg/dom/operatorAttribute.html test touches this, but only under the V8 build. I only found it because the test was failing under Chromium.
Eric Seidel (no email)
Comment 4 2010-01-25 21:30:46 PST
Comment on attachment 47382 [details] Proposed patch Normally we should mention that in the ChangeLog. :) Even though the results aren't in webkit.org yet.
WebKit Commit Bot
Comment 5 2010-01-26 01:40:44 PST
Comment on attachment 47382 [details] Proposed patch Clearing flags on attachment: 47382 Committed r53843: <http://trac.webkit.org/changeset/53843>
WebKit Commit Bot
Comment 6 2010-01-26 01:40:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.