2010-01-26  Garret Kelly  <gdk@chromium.org>

Reviewed by Eric Seidel.

        Add missing declaration for the feMorphology SVG element.
        https://bugs.webkit.org/show_bug.cgi?id=34151

        * bindings/v8/V8DOMWrapper.cpp:

Canonical link: https://commits.webkit.org/45226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53843 268f45cc-cd09-0410-ab3c-d52691b4dbfc